# review-pdf-to-latex

./: .gitignore  CHANGELOG.md  DOLT_REMOTE.md  LICENSE  README.md  manifest  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
desktop/: .gitignore  README.md  TESTER-README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
desktop/main/: agent-pane-ipc.test.ts  agent-pane-ipc.ts  atomic-write.ts  bundle.test.ts  bundle.ts  claude-backend.test.ts  claude-backend.ts  claude-pty.ts  doc-identity.test.ts  doc-identity.ts  docx-comments.test.ts  docx-comments.ts  docx-ipc.test.ts  docx-ipc.ts  drafts-migration.test.ts  drafts-migration.ts  engine-pdf-health.test.ts  engine.ts  external-open.test.ts  external-open.ts  fs-ipc.ts  index.ts  ipc-validators.test.ts  ipc-validators.ts  pdf-comments.test.ts  pdf-comments.ts  pdf-ipc.test.ts  pdf-ipc.ts  quit-flush.ts  results-watcher.test.ts  results-watcher.ts  reviewer-probe.test.ts  reviewer-probe.ts  session-policy.test.ts  session-policy.ts  session-store.ts  sidecar-migration.test.ts  sidecar-migration.ts  submit.test.ts  submit.ts  (+2 more)
tests/: conftest.py  test_apply.py  test_build.py  test_bulk_surface.py  test_changelog.py  test_cli.py  test_commit.py  test_e2e.py  test_events.py  test_extract.py  test_extract_cli.py  test_fixtures.py  test_migrate.py  test_pdf_health.py  test_preview.py  test_readme.py  test_scaffolding.py  test_server.py  test_skill.py  test_state.py  test_status.py  test_templates.py  test_terminal.py
(+203 files in other folders)
