[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-pdf-to-latex"
version = "0.1.0"
description = "Sidecar tool for walking PDF annotations into LaTeX source edits."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Anthony Byrnes" },
]
keywords = ["latex", "pdf", "annotations", "review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "pdfannots>=0.4.1",
    "pdfplumber>=0.10",
    "rapidfuzz>=3.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
review-pdf = "review_pdf_to_latex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/review_pdf_to_latex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
    "slow: end-to-end / system tests; deselect with -m 'not slow'",
]
